# bench-bench

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: pages.yml
bench_harness/: __init__.py  clients.py  config.py  display.py  metrics.py  python_client.py  python_deferred_client.py  python_mp.py  python_openai_client.py  sse.py  sweep.py  sweep_report.py
config/: sweep.default.json  sweep.eps100.json  sweep.experiment.json  sweep.linux.json  sweep.percore.json  sweep.smoke.json  sweep.taster.json  workload.compare.json  workload.default.json  workload.smoke.json
docs/: CONTRACTS.md  HANDOFF.md  index.html
docs/superpowers/plans/: 2026-06-29-llm-harness-overhead.md  2026-06-30-static-benchmark-report.md  2026-07-03-paced-streaming-sweep.md
docs/superpowers/specs/: 2026-06-29-llm-harness-overhead-design.md  2026-06-30-static-benchmark-report-design.md
go-client/: go.mod  main.go  main_test.go
reports/sweep/: index.html
rust-client/: Cargo.toml
rust-client/src/: lib.rs  main.rs
rust-client/tests/: parser.rs
scripts/: compare_results.py  generate_report.py  generate_sweep_report.py  run_smoke.py  run_sweep.py  setup.sh
server-rust/: Cargo.toml
server-rust/src/: lib.rs  main.rs
server-rust/tests/: streaming.rs
tests/: test_clients.py  test_config.py  test_generate_report.py  test_generate_sweep_report.py  test_metrics.py  test_python_client.py  test_python_variants.py  test_run_smoke.py  test_run_sweep.py  test_shims.py  test_sse.py  test_sweep.py  test_sweep_report.py
