[project]
name = "bench"
version = "0.1.0"
description = "Local benchmark demo comparing Python, Go, and Rust LLM streaming harness overhead."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
bench-python = "bench_harness.python_client:main"
bench-sweep = "bench_harness.sweep:main"
bench-sweep-report = "bench_harness.sweep_report:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Flat layout: the package lives at the repo root, not under src/.
module-root = ""
module-name = "bench_harness"
