[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_client"
path = "src/lib.rs"

[[bin]]
name = "rust-benchmark-client"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
